--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,3 +3,13 @@ Memberships
 * User should see link for Pro Plan on home page
 * Basic plan link should point to the regular Devise sign up form
 * Pro plan link should point to a custom sign up form
+
+Stripe integration
+* Users should have a stripe customer token in the users table.
+* Javascript should prevent Pro form from submitting, when user fills it out,
+and should send card info to stripe. Stripe will return with a card token.
+* Javascript should send user fields and card token to our rails app for validation. Rails app 
+should validate the user fields. Rails app will note whether Basic plan (1) or Pro plan (2).
+* Once validated rails should send user info (email, plan id) and card token
+to stripe servers and stripe will create a subscription and send back customer
+token. Rails should save customer token and user information to our database.
